--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   # Schedule updates (every hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "0 0 * * *"}]
   # Lines below let you run it manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
